--- a/homework/index.html
+++ b/homework/index.html
@@ -27,11 +27,11 @@
 
       <input type="submit" value="save">
     </form>
-    <button type="button" name="delete-all-button">Delete All</button>
+    <button type="button" name="delete-all-button" id="delete-all-button">Delete All</button>
 
     <h2>Game Collection:</h2>
     <div id="game-collection">
-      
+
     </div>
   </body>
 </html>
