added radio buttons

--- a/homework/index.html
+++ b/homework/index.html
@@ -25,6 +25,12 @@
 
       </select>
 
+      <input type="radio" name="digital" id="digital" value="Digital"checked>
+      <label for="digital">Digital</label>
+
+      <input type="radio" name="physical" id="physical" value="Physical">
+      <label for="Physical">Physical</label>
+
       <input type="submit" value="save">
     </form>
     <button type="button" name="delete-all-button" id="delete-all-button">Delete All</button>
