fixed radio buttons and added CSS

--- a/homework/index.html
+++ b/homework/index.html
@@ -25,11 +25,11 @@
 
       </select>
 
-      <input type="radio" name="digital" id="digital" value="Digital"checked>
+      <input type="radio" name="type" id="digital" value="Digital"checked>
       <label for="digital">Digital</label>
 
-      <input type="radio" name="physical" id="physical" value="Physical">
-      <label for="Physical">Physical</label>
+      <input type="radio" name="type" id="physical" value="Physical">
+      <label for="physical">Physical</label>
 
       <input type="submit" value="save">
     </form>
